resolved mainpage socials bug on safari

--- a/src/styles/css/_mainPage.css
+++ b/src/styles/css/_mainPage.css
@@ -88,28 +88,22 @@
   opacity: 0;
   position: absolute;
   right: 0;
-
   writing-mode: vertical-rl;
   padding: var(--size-12) var(--size-12);
-
   border-bottom-left-radius: 5px;
-
   border-top-left-radius: 5px;
   background: rgba(0, 0, 0, 0.2);
-
   display: flex;
-
   align-items: center;
-
   justify-content: center;
   height: 70%;
   font-size: var(--fs-xs);
   color: var(--off-white);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
-
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+  transform: translateX(-50%);
 }
 
 .main-page-section .main-page-content-container .main-page-text-container .studio-single-socials a {
@@ -371,19 +365,6 @@
   .main-page-section:last-of-type .main-page-content-container .main-page-text-container h2 {
     font-size: var(--fs-h3);
     padding-top: 20px;
-  }
-
-  .main-page-section:last-of-type .main-page-content-container .main-page-text-container .studio-single-socials {
-    font-size: 70%;
-    height: auto;
-    writing-mode: horizontal-tb;
-    width: 30%;
-    top: 0;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%) !important;
-    right: auto;
-    padding: 5px;
   }
 
   .main-page-section:last-of-type .main-page-content-container .main-page-text-container .studio-single-socials p {
