--- a/src/styles/css/_navbar.css
+++ b/src/styles/css/_navbar.css
@@ -127,9 +127,7 @@
 .primary-nav-container-curtain .hamburger-icon.open .hamburger:before,
 .primary-nav-container-curtain .hamburger-icon.open .hamburger:after {
   top: 0;
-  transition: top 0.2s ease, -webkit-transform 0.2s ease 0.2s;
-  transition: top 0.2s ease, transform 0.2s ease 0.2s;
-  transition: top 0.2s ease, transform 0.2s ease 0.2s, -webkit-transform 0.2s ease 0.2s, -moz-transform 0.2s ease 0.2s, -o-transform 0.2s ease 0.2s;
+  transition: top 0.2s ease, transform 0.2s ease 0.2s, background-color 0.2s ease;
 }
 
 .primary-nav-container-curtain .hamburger-icon.open .hamburger:before {
